updated manifest icon path

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "My First PWA App",
     "short_name": "MyPWA",
-    "start_url": "/index.html",
+    "start_url": "https://pwasushil.herokuapp.com/index.html",
     "display": "standalone",
     "orientation": "any",
     "background_color": "#FEFEFE",
@@ -10,33 +10,33 @@
     "dir": "ltr",
     "lang": "en-US",
      "icons": [{
-        "src": "./assets/app-icon-48x48.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-48x48.png",
         "sizes": "48x48",
         "type": "image/png"
     }, {
-        "src": "./assets/app-icon-96x96.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-96x96.png",
         "sizes": "96x96",
         "type": "image/png"
     }, {
-        "src": "./assets/app-icon-144x144.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
     }, {
-        "src": "./assets/app-icon-192x192.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
     },{
-        "src": "./assets/app-icon-256x256.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-256x256.png",
         "type": "image/png",
         "sizes": "256x256"
       },
       {
-        "src": "./assets/app-icon-384x384.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-384x384.png",
         "type": "image/png",
         "sizes": "384x384"
       },
       {
-        "src": "./assets/app-icon-512x512.png",
+        "src": "https://pwasushil.herokuapp.com/assets/app-icon-512x512.png",
         "type": "image/png",
         "sizes": "512x512"
       }]
